--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-async-component": "^1.0.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1"
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "react-app-rewire-hot-loader": "^1.0.0",
-    "react-app-rewired": "^1.3.8"
+    "react-app-rewired": "^1.3.8",
+    "standard": "^10.0.3"
   }
 }
